--- a/app/views/pages/_portfolio.html.erb
+++ b/app/views/pages/_portfolio.html.erb
@@ -19,9 +19,9 @@
                   Le MVP a été réalisé lors d'un sprint de 10 jours au Wagon, en équipe de 4. Nous avons utilisé les technologies ActionCable et API Rest.
                 </p>
                 <div class="icons">
-                  <%= image_tag('iconsNew/HTML.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/CSS.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/JS.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/HTML2.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/CSS2.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/JS2.svg', width: '50')  %>
                 </div>
               </div>
             </div>
@@ -42,9 +42,9 @@
                 <p>Création d’une messagerie clone de Twitter d’après le cours de Michael Hart. L’inscription, l'authentification et l’identification des utilisateurs sont codés <em>from scratch</em> et reproduisent le comportement de Devise. Chaque utilisateur peut envoyer des microposts avec texte et image, et choisir de suivre d'autres utilisateurs.
                 </p>
                 <div class="icons">
-                  <%= image_tag('iconsNew/HTML.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/CSS.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/JS.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/HTML2.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/CSS2.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/JS2.svg', width: '50')  %>
                 </div>
               </div>
             </div>
@@ -65,9 +65,9 @@
                 <p>Ce MVP a été réalisé en un sprint de 5 jours au Wagon en équipe de 4. Clonant Airbnb, il permet à chaque utilisateur de louer un animal domestique, et aussi de mettre le sien en location, avec géolocalisation.
                 </p>
                       <div class="icons">
-                  <%= image_tag('iconsNew/HTML.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/CSS.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/JS.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/HTML2.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/CSS2.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/JS2.svg', width: '50')  %>
                 </div>
               </div>
             </div>
@@ -89,8 +89,8 @@
                   Création d'une interface d'inscription en ligne.
                                 </p>
                       <div class="icons">
-                  <%= image_tag('iconsNew/HTML.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/CSS.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/HTML2.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/CSS2.svg', width: '50')  %>
                   <%= image_tag('iconsNew/SQL.svg', width: '50')  %>
                   <%= image_tag('iconsNew/php.svg', width: '50')  %>
 
@@ -114,9 +114,9 @@
                 <h2>Site personnel professionnel</h2>
                 <p>J'ai créé ce site il y a 10 ans pour promouvoir mon profil professionnel. J'ai appris HTML, CSS et javascript en autodidacte. Je le mets régulièrement à jour, et tous les 2-3 ans je procède à une refonte de l'UI pour évoluer avec l'esthétique et la technologie de l'air du temps.</p>
                 <div class="icons">
-                  <%= image_tag('iconsNew/HTML.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/CSS.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/JS.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/HTML2.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/CSS2.svg', width: '50')  %>
+                  <%= image_tag('iconsNew/JS2.svg', width: '50')  %>
                 </div>
               </div>
             </div>
