--- a/app/views/pages/_skills.html.erb
+++ b/app/views/pages/_skills.html.erb
@@ -1,37 +1,27 @@
-<section id="skills" style="background-image: linear-gradient(rgba(33, 10, 172,0.25), rgba(33, 10, 172,0.85)), url(<%= image_path ('banner.jpg') %>)" >
-      <div class="container">
-        <h1>Skills</h1>
-          <p></p>
-          <table>
-          <thead>
-            <tr>
-              <td><%= image_tag 'icons/rails.svg', width: 35 %>Ruby On Rails</td>
-              <td><%= image_tag 'icons/react.svg', width: 35 %>React</td>
-              <td><%= image_tag 'icons/photoshop.svg', width: 35 %>Photoshop</td>
-            </tr>
-            <tr>
-              <td><%= image_tag 'icons/HTML.svg', width: 30 %>HTML</td>
-              <td><%= image_tag 'icons/heroku.svg', width: 35 %>Heroku</td>
-              <td><%= image_tag 'icons/illustrator.svg', width: 35 %>Illustrator</td>
-            <tr>
-            <tr>
-              <td><%= image_tag 'icons/CSS.svg', width: 30 %>CSS</td>
-              <td><%= image_tag 'icons/postgresql.svg', width: 45 %>PostgreSQL</td>
-              <td><%= image_tag 'icons/indesign.svg', width: 35 %>InDesign</td>
-            </tr>
-            <tr>
-              <td><%= image_tag 'icons/JS.svg', width: 30 %>Javascript ES6</td>
-              <td><%= image_tag 'icons/git.svg', width: 35 %>Git</td>
-            </tr>
-            <tr>
-              <td><%= image_tag 'icons/github.svg', width: 35 %>Github</td>
-              <td><%= image_tag 'icons/ruby.svg', width: 35 %>Ruby</td>
-            </tr>
-            <tr>
-              <td><%= image_tag 'icons/SQL.svg', width: 35 %>SQL</td>
-
-            </tr>
-          </thead>
-        </table>
-      </div>
-    </section>
+<section id="skills" style="background-image: linear-gradient(rgba(10, 3, 130,0.25), rgba(10, 3, 130,0.85)), url(<%= image_path ('banner.jpg') %>)" >
+  <div class="container">
+    <h1>Skills</h1>
+    <p></p>
+    <div class="skills_cards">
+      <% skills = [{ icon: 'rails', text: 'Ruby On Rails 6' },
+       { icon: 'HTML', text: 'HTML'},
+       { icon: 'CSS', text: 'CSS'},
+       { icon: 'JS', text: 'Javascript ES6'},
+       { icon: 'SQL', text: 'SQL'},
+       { icon: 'github', text: 'Github'},
+       { icon: 'react', text: 'React'},
+       { icon: 'heroku', text: 'Heroku'},
+       { icon: 'postgresql', text: 'PostgreSQL'},
+       { icon: 'git', text: 'Git'},
+       { icon: 'ruby', text: 'Ruby'},
+       { icon: 'photoshop', text: 'Photoshop'},
+       { icon: 'illustrator', text: 'Illustrator'},
+       { icon: 'indesign', text: 'Indesign'},
+       { icon: 'figma', text: 'Figma'},
+       ] %>
+       <% skills.each do |skill| %>
+       <%= render 'skill_card', skill %>
+       <% end %>
+     </div>
+   </div>
+</section>
