complete card and responsive portfolio zone

--- a/app/views/pages/_skills.html.erb
+++ b/app/views/pages/_skills.html.erb
@@ -1,4 +1,4 @@
-<section id="skills" style="background-image: linear-gradient(rgba(10, 3, 130,0.25), rgba(10, 3, 130,0.85)), url(<%= image_path ('banner.jpg') %>)" >
+<section id="skills" style="background-image: linear-gradient(rgba(10, 3, 130,0.25), rgba(10, 3, 130, 0.85)), url(<%= image_path ('banner.jpg') %>)" >
   <div class="container">
     <h1>Skills</h1>
     <p></p>
