--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -36,9 +36,14 @@ section {
   .container {
     padding: 8em 0;
   }
+  h1 {
+  margin-bottom: 50px;
+  }
 }
 .container {
-  width: 960px;
+  // width: 960px;
+  width: 80%;
+  max-width: 1100px;
   margin: 0 auto;
   text-align: left;
   font-size: 18px;
@@ -166,13 +171,13 @@ footer {
     width: 100%;
     height: inherit;
 
-    display: flex;
-    flex-wrap: wrap;
-    align-content: start;
-    justify-content: space-between;
-    align-items: center;
+    // display: flex;
+    // flex-wrap: wrap;
+    // align-content: start;
+    // justify-content: center;
+    // // align-items: center;
 
-    .portfolio_card {
+    .portfolio_card { // possibilité non exploitée
       background-color: white;
       height: 400px;
       width: 500px;
@@ -198,6 +203,102 @@ footer {
         p {
           font-size: 0.8em;
           color: $white;
+        }
+      }
+    }
+    .wrapper {
+      display: grid;
+      width: 100%;
+      grid-template-columns: repeat(auto-fill, 510px);
+      justify-content: space-around;
+
+      grid-row-gap: 80px;
+    }
+    .wcard {
+      width: 510px;
+      height: 340px;
+      border-radius: 15px;
+      padding: 1.5rem;
+      background: white;
+      position: relative;
+      display: flex;
+      align-items: flex-end;
+      transition: 0.4s ease-out;
+      box-shadow: 0px 7px 10px rgba(black, 0.5);
+      &:hover {
+        transform: translateY(20px);
+        &:before {
+          opacity: 1;
+        }
+        .info {
+          opacity: 1;
+          transform: translateY(0px);
+        }
+      }
+      &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        border-radius: 15px;
+        background: linear-gradient(rgba(10, 3, 130,0.5), rgba(10, 3, 130,0.9));
+        z-index: 2;
+        transition: 0.5s;
+        opacity: 0;
+      }
+      img.screenshot {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 15px;
+      }
+      .info {
+          position: relative;
+          z-index: 3;
+          color: white;
+          opacity: 0;
+          transform: translateY(30px);
+          transition: 0.5s;
+          h1 {
+            color: $complementaire;
+            margin: 0px;
+          }
+
+          p {
+            letter-spacing: 1px;
+            font-size: 15px;
+            margin-top: 8px;
+            margin-bottom: 24px;
+          }
+          .icons {
+            display: block;
+            float: right;
+            margin-bottom: 16px;
+            img {
+              margin-right: 1em;
+            }
+          }
+          .button {
+            padding: 0.4rem;
+            outline: none;
+            border-radius: 8px;
+            background: none;
+            border: 2px solid rgba(169, 156, 127,0.7);
+            color: rgba(169, 156, 127,0.7);
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.4s ease;
+            &:hover {
+            border: 2px solid rgba(212, 206, 191,1);
+            color: rgba(212, 206, 191,1);
+            text-decoration: none;
+          }
         }
       }
     }
@@ -247,19 +348,40 @@ footer {
     color: $white;
   }
 }
+
 .card_strip {
   margin: 3em 0;
   padding-bottom: 3em;
   border-bottom: 1px solid rgba(10, 3, 130,0.7);
+  display: grid;
+  grid-template-columns: 400px 1fr;
+
+  grid-gap: 1em;
+  .portfolio_image {
+    grid-column: 1;
+  }
+  .portfolio_content {
+    grid-column: 2;
+  }
 }
-.image-card {
+@media(max-width: 768px) {
+.card_strip {
+  grid-template-columns: 1fr;
+  }
+    .portfolio_content {
+    grid-column: 1;
+  }
+}
+
+.image_card {
   width: 200px;
   height: 300px;
   // background-image: linear-gradient(rgba(212, 206, 191,0.6), rgba(212, 206, 191,0.9)), url('petme.jpg');
   // background-image: linear-gradient(rgba(10, 3, 130,0.2), rgba(10, 3, 130,0.5)), url('petme.jpg');
-
+  margin: 0 auto;
   border-radius: 5px;
 }
+
 .content-card {
   h2 {
     color: $dominante;
