--- a/app/views/pages/_portfolio.html.erb
+++ b/app/views/pages/_portfolio.html.erb
@@ -4,8 +4,7 @@
 
       <div id="cards_section">
 
-        <div class="wrapper">
-          <div class="wcard">
+          <div class="portfolio_card">
               <%= image_tag('miniGuesswhat.jpg', class:"screenshot") %>
               <div class="info">
               <h1>
@@ -28,7 +27,7 @@
           </div>
 
 
-          <div class="wcard">
+          <div class="portfolio_card">
               <%= image_tag('miniStaticpages.jpg', class:"screenshot") %>
               <div class="info">
               <h1>
@@ -49,7 +48,7 @@
           </div>
 
 
-          <div class="wcard">
+          <div class="portfolio_card">
               <%= image_tag('miniPetme.jpg', class:"screenshot") %>
               <div class="info">
               <h1>
@@ -69,7 +68,7 @@
             </div>
           </div>
 
-          <div class="wcard">
+          <div class="portfolio_card">
               <%= image_tag('miniAdhesion.jpg', class:"screenshot") %>
               <div class="info">
               <h1>
@@ -89,7 +88,7 @@
             </div>
           </div>
 
-          <div class="wcard">
+          <div class="portfolio_card">
               <%= image_tag('miniSiteperso.jpg', class:"screenshot") %>
               <div class="info">
               <h1>
@@ -109,7 +108,10 @@
             </div>
           </div>
 
+      </div>
+
 </div>
+</section>
 <!--
 
         <%# card = {link: "staticpages.jpg", title: 'Guesswhat', content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.'}
