--- a/app/views/pages/_skill_card.html.erb
+++ b/app/views/pages/_skill_card.html.erb
@@ -2,6 +2,16 @@
 
     <%= image_tag "iconsNew/#{icon}.svg", width: 50 %>
   <div class="text_container">
-    <span><%= text %></span>
+    <%= text %>
   </div>
 </div>
+
+
+
+
+<!--
+    <%= image_tag "iconsNew/#{icon}.svg", width: 50 %>
+  <div class="text_container">
+    <span><%= text %></span>
+  </div>
+-->
