--- a/app/views/pages/_skills.html.erb
+++ b/app/views/pages/_skills.html.erb
@@ -1,7 +1,12 @@
 <section id="skills" style="background-image: linear-gradient(rgba(10, 3, 130,0.25), rgba(10, 3, 130, 0.85)), url(<%= image_path ('banner.jpg') %>)" >
   <div class="container">
     <h1>Skills</h1>
-    <p></p>
+    <p>Riche d’un parcours dans les arts-appliqués, j’ai professionnalisé
+    mes compétences en développement web. Je souhaite mettre à profit de nombreuses
+  skills acquises dans la conception de produits et de solutions sur-mesure : adaptabilité
+à l’exigence client, gestion d’équipe hyper réactive, méthodes orientées résultat, autonomie et
+exigence qualitative, qui s’apparentent au mode de travail agile.
+</p>
     <div class="skills_cards">
       <% skills = [{ icon: 'rails', text: 'Ruby On Rails 6' },
        { icon: 'HTML', text: 'HTML'},
