--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,7 +1,7 @@
 <section id="banner" style="background-image: linear-gradient(rgba(33, 10, 172,0.3), rgba(33, 10, 172,0.3)),url(<%= image_path('banner.jpg') %>)">
   <div class="container">
-    <h1>Pierre Garcia</h1>
-    <h1 style="color: #a99c7f">Développeur Fullstack</h1>
+    <h1>Pierre Garcia<br><span style="color: #0A0382">
+    Développeur Fullstack</span></h1>
     <p>Riche d’un parcours dans les arts-appliqués, j’ai professionnalisé
     mes compétences en développement web. Je souhaite mettre à profit de nombreuses
   skills acquises dans la conception de produits et de solutions sur-mesure : adaptabilité
