secure bio rows and col

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -366,7 +366,7 @@ footer {
 }
 
 
-.bio-card {
+.bio_card {
   cursor: pointer;
   width: 100%;
   position: relative;
@@ -401,12 +401,11 @@ footer {
   background: none;
 }
 
-.bio-card:after {
+.bio_card:after {
   content: "";
   display: block;
   padding-bottom: 100%;
 }
-
 .back-content {
   text-align: center;
   width: 100%;
@@ -418,6 +417,7 @@ footer {
     color: $noir;
   }
   .sm a {
+    color: $noir;
     display: inline-flex;
     width: 40px;
     height: 40px;
@@ -426,16 +426,16 @@ footer {
     transition: 0.4s;
   }
   .sm a:hover {
-    background: yellow;
+    background: $complementaire;
     color: white;
     border-radius: 50%;
   }
 
 }
-.bio-card:hover > .front {
+.bio_card:hover > .front {
   transform: perspective(600px) rotateY(-180deg);
 }
-.bio-card:hover > .back {
+.bio_card:hover > .back {
   transform: perspective(600px) rotateY(0deg);
 }
 
