--- a/app/views/pages/_nav.html.erb
+++ b/app/views/pages/_nav.html.erb
@@ -1,6 +1,6 @@
 
     <nav id="navigation" class="navbar sticky-top navbar-expand-lg">
-      <a class="navbar-brand" href="#">\ PG /</a>
+      <a class="navbar-brand" href="#banner">\ PG /</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
