--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -57,6 +57,8 @@ section {
     font-family: "Montserrat", "Futura", Arial, sans-serif;
   }
 }
+
+
 footer {
   height: auto;
   width: 100%;
@@ -173,7 +175,7 @@ footer {
   }
 }
 
-#portfolio{
+#portfolio{ /* largeur pour le smartphone */
   background-color: $gris;
   color: $dominante;
   height: inherit;
@@ -276,21 +278,10 @@ footer {
   }
 }
 
-#bio{
-  background-position: center center;
-  background-attachment: fixed;
-  background-size: cover;
-  background-color: $complementaireClaire;
-  color: $white;
-  height: inherit;
-  p {
-    // padding: 3em 0;
-  }
-  .col-4 { // en attendant de faire la bio au grid
-    padding: 5px;
-  }
+@media(max-width: 768px) {
+  .container{ width: 95%; }
+  .portfolio_card { width: 80%; }
 }
-
 #contact{
   background-color: $complementaireClaire;
   background-position: center center;
@@ -373,13 +364,36 @@ footer {
   }
 }
 
+#bio{
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: $complementaireClaire;
+  color: $white;
+  height: inherit;
+  p {
+    // padding: 3em 0;
+  }
+  .col-4 { // en attendant de faire la bio au grid
+    padding: 5px;
+  }
+  .bio_cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+
+  }
+}
 
 .bio_card {
   cursor: pointer;
   width: 100%;
   position: relative;
+
+
   .front {
     border-radius: 20px;
+    transform: perspective(600px) rotateY(0deg);
+    background-size: cover;
   }
   .front, .back {
     width: 100%;
@@ -389,10 +403,7 @@ footer {
     position: absolute;
     transition: transform .6s linear;
   }
-  .front {
-    transform: perspective(600px) rotateY(0deg);
-    background-size: cover;
-  }
+
   .back {
     background-color: rgba(255, 255, 255, 0.35);
     transform: perspective(600px) rotateY(180deg);
