--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -2,11 +2,7 @@
   <div class="container">
     <h1 style="color: #0A0382">Pierre Garcia<br><span style="color:#FEFDED">
     Développeur Fullstack</span></h1>
-    <p>Riche d’un parcours dans les arts-appliqués, j’ai professionnalisé
-    mes compétences en développement web. Je souhaite mettre à profit de nombreuses
-  skills acquises dans la conception de produits et de solutions sur-mesure : adaptabilité
-à l’exigence client, gestion d’équipe hyper réactive, méthodes orientées résultat, autonomie et
-exigence qualitative, qui s’apparentent au mode de travail agile.</p>
+    <p>Développeur Junior familier du code depuis l'adolescence, je souhaite est intégrer une équipe à taille humaine, qui me permette d'évoluer en Back et Front, apporter mes connaissances, et consolider mes bonnes pratiques.</p>
     <a class="button" href="mailto:pierrebgarciad@gmail.com?subject=Hello Pierre">Contact</a>
 
   </div>
