--- a/app/views/pages/_skills.html.erb
+++ b/app/views/pages/_skills.html.erb
@@ -9,9 +9,9 @@ exigence qualitative, qui s’apparentent au mode de travail agile.
 </p>
     <div class="skills_cards">
       <% skills = [{ icon: 'rails', text: 'Ruby On Rails 6' },
-       { icon: 'HTML', text: 'HTML'},
-       { icon: 'CSS', text: 'CSS'},
-       { icon: 'JS', text: 'Javascript ES6'},
+       { icon: 'HTML2', text: 'HTML'},
+       { icon: 'CSS2', text: 'CSS'},
+       { icon: 'JS2', text: 'Javascript ES6'},
        { icon: 'SQL', text: 'SQL'},
        { icon: 'github', text: 'Github'},
        { icon: 'react', text: 'React'},
