fix bio cards and background

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -25,6 +25,17 @@ html {
   font-family: "Roboto", Arial, sans-serif;
 }
 
+// html {
+//   position:absolute;
+// }
+
+// html, body {
+//   overflow:hidden;
+//   background:#000;
+//   width:100%;
+//   height:100%;
+// }
+
 body {
   background-color: $white;
   width: 100%;
