--- a/app/views/pages/_skills.html.erb
+++ b/app/views/pages/_skills.html.erb
@@ -3,9 +3,9 @@
     <h1>Skills</h1>
     <p>Riche d’un parcours dans les arts-appliqués, j’ai professionnalisé
     mes compétences en développement web. Je souhaite mettre à profit de nombreuses
-  skills acquises dans la conception de produits et de solutions sur-mesure : adaptabilité
+  skills acquises dans la conception de produits et de solutions sur-mesure, qui s’apparentent au mode de travail agile : adaptabilité
 à l’exigence client, gestion d’équipe hyper réactive, méthodes orientées résultat, autonomie et
-exigence qualitative, qui s’apparentent au mode de travail agile.
+exigence qualitative.
 </p>
     <div class="skills_cards">
       <% skills = [{ icon: 'rails', text: 'Ruby On Rails 6' },
