complete links footer

--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -16,13 +16,13 @@
         </div>
 
        <div class="text-center">
-          <%= link_to "#" , width: 35 do %>
+          <%= link_to "https://github.com/pierregarciafr" , width: 35 do %>
           <%= image_tag 'iconsNew/github.svg', width: 25 %>
           <% end %>
-          <%= link_to "#" , width: 35 do %>
+          <%= link_to "https://www.linkedin.com/in/pierregarciadesign/" , width: 35 do %>
           <%= image_tag 'iconsNew/linkedin1.svg', width: 25 %>
           <% end %>
-          <%= link_to "#" , width: 35 do %>
+          <%= link_to "https://www.instagram.com/pg.pierre.garcia/" , width: 35 do %>
           <%= image_tag 'iconsNew/instagram2.svg', width: 25 %>
           <% end %>
         </div>
