set up skill model and model test

--- a/app/views/pages/_skill_card.html.erb
+++ b/app/views/pages/_skill_card.html.erb
@@ -1,17 +1,8 @@
 <div class='skill_card'>
 
-    <%= image_tag "iconsNew/#{icon}.svg", width: 50 %>
+    <%= image_tag "iconsNew/#{iconName}", width: 50 %>
   <div class="text_container">
     <%= text %>
   </div>
 </div>
 
-
-
-
-<!--
-    <%= image_tag "iconsNew/#{icon}.svg", width: 50 %>
-  <div class="text_container">
-    <span><%= text %></span>
-  </div>
--->
