--- a/app/views/pages/_skills.html.erb
+++ b/app/views/pages/_skills.html.erb
@@ -8,24 +8,8 @@ à l’exigence client, gestion d’équipe hyper réactive, méthodes orien
 exigence qualitative.
 </p>
     <div class="skills_cards">
-      <% skills = [{ icon: 'rails', text: 'Ruby On Rails 6' },
-       { icon: 'HTML2', text: 'HTML'},
-       { icon: 'CSS2', text: 'CSS'},
-       { icon: 'JS2', text: 'Javascript ES6'},
-       { icon: 'SQL', text: 'SQL'},
-       { icon: 'github', text: 'Github'},
-       { icon: 'react', text: 'React'},
-       { icon: 'heroku', text: 'Heroku'},
-       { icon: 'postgresql', text: 'PostgreSQL'},
-       { icon: 'git', text: 'Git'},
-       { icon: 'ruby', text: 'Ruby'},
-       { icon: 'photoshop', text: 'Photoshop'},
-       { icon: 'illustrator', text: 'Illustrator'},
-       { icon: 'indesign', text: 'Indesign'},
-       { icon: 'figma', text: 'Figma'},
-       ] %>
-       <% skills.each do |skill| %>
-       <%= render 'skill_card', skill %>
+       <% @skills.each do |skill| %>
+         <%= render 'skill_card', iconName: skill.iconName, text: skill.text %>
        <% end %>
      </div>
    </div>
