Project class : implement model and view, and model tests

--- a/app/views/pages/_portfolio.html.erb
+++ b/app/views/pages/_portfolio.html.erb
@@ -2,112 +2,10 @@
   <div class="container">
     <h1>Portfolio</h1>
 
-      <div id="cards_section">
-
-          <div class="portfolio_card">
-              <%= image_tag('miniGuesswhat.jpg', class:"screenshot") %>
-              <div class="info">
-              <h1>
-                Blind test musical
-              </h1>
-              <p>Ce jeu à reconnaissance vocale permet à l'utilisateur d'inviter un autre joueur de se connecter à la partie. Chacun peut jouer depuis son propre smartphone.
-                Le MVP a été réalisé lors d'un sprint de 10 jours au Wagon, en équipe de 4. Nous avons utilisé les technologies ActionCable et API Rest.
-              </p>
-                <div class="icons">
-                  <%= image_tag('iconsNew/rails.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/HTML.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/CSS.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/JS.svg', width: '40')  %>
-                </div>
-              <%= link_to "https://www.guesswhat.live", target: 'blank', class: 'button' do %>
-              to Website
-              <% end %>
-
-            </div>
-          </div>
-
-
-          <div class="portfolio_card">
-              <%= image_tag('miniStaticpages.jpg', class:"screenshot") %>
-              <div class="info">
-              <h1>
-                Messagerie
-              </h1>
-              <p>Création d’une messagerie clone de Twitter d’après le cours de Michael Hart. L’inscription, l'authentification et l’identification des utilisateurs sont réalisés <em>from scratch</em> et reproduisent le comportement de Devise. Chaque utilisateur peut envoyer des microposts avec texte et image, et choisir de suivre d'autres utilisateurs.
-               </p>
-                <div class="icons">
-                  <%= image_tag('iconsNew/rails.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/HTML.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/CSS.svg', width: '40')  %>
-<!--              <%#= image_tag('iconsNew/JS.svg', width: '40')  %>
- -->                </div>
-              <%= link_to "https://staticpages-pg.herokuapp.com/", target: 'blank', class: 'button' do %>
-              to Website
-              <% end %>
-            </div>
-          </div>
-
-
-          <div class="portfolio_card">
-              <%= image_tag('miniPetme.jpg', class:"screenshot") %>
-              <div class="info">
-              <h1>
-                Marketplace
-              </h1>
-              <p>Ce MVP a été réalisé en un sprint de 5 jours au Wagon en équipe de 4. Clonant Airbnb, il permet à chaque utilisateur de louer un animal domestique, et aussi de mettre le sien en location, avec géolocalisation.
-                  </p>
-                <div class="icons">
-                  <%= image_tag('iconsNew/rails.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/HTML.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/CSS.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/JS.svg', width: '40')  %>
-                </div>
-              <%= link_to "https://pet-me-please.herokuapp.com/", target: 'blank', class: 'button' do %>
-              to Website
-              <% end %>
-            </div>
-          </div>
-
-          <div class="portfolio_card">
-              <%= image_tag('miniAdhesion.jpg', class:"screenshot") %>
-              <div class="info">
-              <h1>
-                Association culturelle
-              </h1>
-              <p>Refonte Front et Back de tout le site internet. Mises à jour régulières en fonction de l'actualité.
-                  Création d'une interface d'inscription en ligne.</p>
-                <div class="icons">
-                  <%= image_tag('iconsNew/HTML.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/CSS.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/SQL.svg', width: '50')  %>
-                  <%= image_tag('iconsNew/php.svg', width: '50')  %>
-                </div>
-              <%= link_to "https://www.capoeiraviola.com/", target: 'blank', class: 'button' do %>
-              to Website
-              <% end %>
-            </div>
-          </div>
-
-          <div class="portfolio_card">
-              <%= image_tag('miniSiteperso.jpg', class:"screenshot") %>
-              <div class="info">
-              <h1>
-                Portfolio d'artiste
-              </h1>
-              <p>J'ai créé ce site il y a 10 ans pour promouvoir mon profil professionnel. J'ai appris HTML, CSS et javascript en autodidacte. Je le mets régulièrement à jour, avec des refontes de l'UI pour suivre l'évolution des codes visuels.
-                </p>
-                <div class="icons">
-                  <%= image_tag('iconsNew/HTML.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/CSS.svg', width: '40')  %>
-                  <%= image_tag('iconsNew/SQL.svg', width: '50')  %>
-                </div>
-              <%= link_to "https://www.pierregarcia.fr/", target: 'blank', class: 'button' do %>
-              Vers le site
-              <% end %>
-            </div>
-          </div>
-
-      </div>
-
-</div>
+    <div id="cards_section">
+      <% @portfolio.each do |project| %>
+        <%= render 'portfolio_card', project: project %>
+      <% end %>
+    </div>
+  </div>
 </section>
