fix color on banner and remove comms

--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,6 +1,6 @@
 <section id="banner" style="background-image: linear-gradient(rgba(33, 10, 172,0.3), rgba(33, 10, 172,0.3)),url(<%= image_path('banner.jpg') %>)">
   <div class="container">
-    <h1 style="color: #0A0382">Pierre Garcia<br><span style="color:#FEFDED">
+    <h1 style="color: #a99c7f">Pierre Garcia<br><span style="color:#FEFDED">
     Développeur Fullstack</span></h1>
     <p>Développeur Junior familier du code depuis l'adolescence, je souhaite est intégrer une équipe à taille humaine, qui me permette d'évoluer en Back et Front, apporter mes connaissances, et consolider mes bonnes pratiques.</p>
     <a class="button" href="mailto:pierrebgarciad@gmail.com?subject=Hello Pierre">Contact</a>
