--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -12,7 +12,7 @@
         </div>
         <div class="text-center">
           <p><%= image_tag('iconsNew/telephone.svg', width: 12) %>+33 616 727 481</p>
-          <p><%= image_tag('iconsNew/mail.svg', width: 15) %>pierrebgarciad@gmail.com</p>
+          <p><%= image_tag('iconsNew/mail.svg', width: 15) %>contact@pierregarcia.org</p>
         </div>
 
        <div class="text-center">
@@ -33,6 +33,7 @@
         <div class="text-right">
           <p>Mentions légales</p>
           <p>Plan du site</p>
+          <p><%= link_to 'Administrateur', new_user_session_path %></p>
         </div>
       </div>
 
